fix readme and remove dev client info

--- a/index.html
+++ b/index.html
@@ -28,15 +28,15 @@
         </div>
         <div class="input-group mb-3">
             <span class="input-group-text"><strong>Client Id</strong></span>
-            <input type="text" class="form-control" id="client_id" value="c2da53a4a4fb7b4a3e20be538e02a3f9">
+            <input type="text" class="form-control" id="client_id" value="">
         </div>
         <div class="input-group mb-3">
             <span class="input-group-text"><strong>Client Secret</strong></span>
-            <input type="text" class="form-control" id="client_secret" value="661a0e04cd4f2d1481629e998b1e68c9">
+            <input type="text" class="form-control" id="client_secret" value="">
         </div>
         <div class="input-group mb-3">
             <span class="input-group-text"><strong>User Id</strong></span>
-            <input type="text" class="form-control" id="app_user_id" value="jxlamb">
+            <input type="text" class="form-control" id="app_user_id" value="">
         </div>
         </br></br>
 
